# ai-agents-for-beginners

./: pyproject.toml
01-intro-to-ai-agents/code_samples/: 01-semantic-kernel.ipynb
